--- a/mobile/src/main/res/layout/fragment_game.xml
+++ b/mobile/src/main/res/layout/fragment_game.xml
@@ -22,4 +22,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pause" />
+    <include layout="@layout/view_keypad" />
 </FrameLayout>
