--- a/mobile/src/main/res/layout/fragment_main_menu.xml
+++ b/mobile/src/main/res/layout/fragment_main_menu.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/hubble_udf">
 
     <TextView
         android:layout_gravity="center_horizontal|top"
         style="@android:style/TextAppearance.DeviceDefault.Large"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/main_fragment_vertical_margin"
         android:text="@string/game_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="#33a631"/>
 
     <Button
         android:id="@+id/btn_start"
